[BUGFIX] Fixes overflow issue in firefox

--- a/styles/components/_rwd-objects.scss
+++ b/styles/components/_rwd-objects.scss
@@ -294,6 +294,7 @@
 		}
 		.item {
 			float: left;
+			overflow: hidden;
 			@include box-sizing(border-box);
 		}
 	}
