--- a/styles/frontendx.css
+++ b/styles/frontendx.css
@@ -739,6 +739,7 @@ hr {
       transition: all 1.5s cubic-bezier(0.54, 0, 0.52, 1); }
     .rwd-object-slider .container .item {
       float: left;
+      overflow: hidden;
       box-sizing: border-box;
       -moz-box-sizing: border-box;
       -webkit-box-sizing: border-box;
